Move hint + roll image up to avoid mobile browser UI overlap

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html, body {
 
 .hint {
   position: fixed;
-  top: 5vh;
+  top: 2vh;
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
@@ -45,7 +45,7 @@ html, body {
 
 .roll {
   position: fixed;
-  top: 16vh;
+  top: 10vh;
   left: 50%;
   transform: translateX(-50%);
   height: 60vh;
